--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tailwindcss/typography": "^0.4.0",
     "ahoy.js": "^0.3.7",
+    "autoprefixer": "^9",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.8.0",
@@ -35,6 +40,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.25.3",
     "popper.js": "^1.16.1",
+    "postcss": "^7",
     "react": "^16.9.0",
     "react-bootstrap": "^1.3.0",
     "react-content-loader": "^5.1.2",
@@ -51,12 +57,14 @@
     "sass": "^1.27.0",
     "slick-carousel": "^1.8.1",
     "sortablejs": "^1.10.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "timepicki": "^2.0.1"
   },
   "version": "0.1.0",
   "devDependencies": {
     "jest": "^26.6.3",
     "mockdate": "^3.0.2",
+    "postcss-loader": "~3.0.0",
     "webpack-dev-server": "^3.10.3"
   },
   "jest": {
