--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-react-jsx": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
-    "ahoy.js": "^0.3.7",
-    "babel-core": "^6.26.3",
+    "@rails/webpacker": "^6.0.0-beta.5",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.6",
     "flatpickr": "^4.6.3",
-    "formik": "^2.1.5",
     "jquery": "^3.5.0",
     "jquery.easing": "^1.4.1",
     "lodash": "^4.17.20",
     "moment": "^2.25.3",
     "popper.js": "^1.16.1",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.3.0",
-    "react-content-loader": "^5.1.2",
-    "react-dom": "^16.9.0",
-    "react-gtm-module": "^2.0.11",
+    "postcss": "^8.2.4",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.2.0",
-    "react-script-tag": "^1.1.2",
     "react-slick": "^0.27.11",
     "react_ujs": "^2.6.1",
     "redux": "^4.0.1",
@@ -51,13 +51,19 @@
     "sass": "^1.27.0",
     "slick-carousel": "^1.8.1",
     "sortablejs": "^1.10.2",
-    "timepicki": "^2.0.1"
+    "tailwindcss": "^2.0.2",
+    "timepicki": "^2.0.1",
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.11.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/info": "^1.2.2",
+    "@webpack-cli/serve": "^1.3.0",
     "jest": "^26.6.3",
     "mockdate": "^3.0.2",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -67,5 +73,10 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  }
 }
