--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -14,6 +14,7 @@ default: &default
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
+#  extract_css: true
 
 development:
   <<: *default
@@ -26,7 +27,7 @@ development:
     port: 3035
     public: localhost:3035
     # Hot Module Replacement updates modules while the application is running without a full reload
-    hmr: false
+    hmr: true
     # Inline should be set to true if using HMR; it inserts a script to take care of live reloading
     inline: true
     # Should we show a full-screen overlay in the browser when there are compiler errors or warnings?
