--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-import": "^14.0.0",
     "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.0",
     "style-loader": "^2.0.0",
@@ -42,12 +43,6 @@
     "presets": [
       "./node_modules/@rails/webpacker/package/babel/preset.js"
     ]
-  },
-  "browserslist": [
-    "defaults"
-  ],
-  "babel": {
-    "presets": ["./node_modules/@rails/webpacker/package/babel/preset.js"]
   },
   "browserslist": [
     "defaults"
