--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2",
-    "turbolinks": "^5.2.0",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
@@ -34,18 +32,11 @@
     "sass-loader": "^11.0.0",
     "style-loader": "^2.0.0",
     "stylelint-config-recommended": "^3.0.0",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-md5-hash": "^0.0.6"
   },
-  "babel": {
-    "presets": [
-      "./node_modules/@rails/webpacker/package/babel/preset.js"
-    ]
-  },
-  "browserslist": [
-    "defaults"
-  ],
   "babel": {
     "presets": ["./node_modules/@rails/webpacker/package/babel/preset.js"]
   },
